# anti-rocky

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml
api/: Dockerfile  hazardous_asteroid_list.json  impacts.py  main.py  orbits.py  population.py  requirements.txt  update_asteroid_list.ipynb  utils.py
api/.ipynb_checkpoints/: update_asteroid_list-checkpoint.ipynb
api/clients/: asteroid_collector.py  firestore.py  mission_design.py  neo.py  sbdb.py
api/static/: script.js  style.css
api/templates/: index.html
frontend/: README.md  index.html  math.js  package-lock.json  package.json  script.js  style.css
frontend/assets/styles/: App.css  global.css
frontend/components/: App.jsx  Asteroid.jsx  MapApp.jsx  Planet.jsx  Planets.jsx  Scene.jsx  SpaceApp.jsx  Stars.jsx
frontend/config/: constants.js
frontend/context/: Camera.jsx  Explosions.jsx  Trails.jsx
frontend/hooks/: useGravity.js
frontend/utils/: calculations.js
impact/: impact.py
terraform/: .terraform.lock.hcl  api.tf  artifact.tf  bucket.tf  cloud_run.tf  firestore.tf  frontend.tf  main.tf  service_account.tf  variables.tf
