[project]
name = "anti-rocky"
version = "0.1.0"
description = "Saving earth from asteroids since 2025-10-04 09:00 CEST"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "Flask>=3.1.2",
    "flask-cors>=6.0.1",
    "geopandas>=1.1.1",
    "google-cloud-firestore>=2.21.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff"
]
